<resources>
    <string name="app_name">SQL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User</string>
    <string name="new_rent">New Rent</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="fiscal_code">Fiscal Code</string>
    <string name="age">Age</string>
    <string name="add_user">Add User</string>
    <string name="user">User:</string>
    <string name="book">Book:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="price">Price:</string>
    <string name="add_book">Add Book</string>
    <string name="new_book">New Book</string>
    <string name="add_rent">Add Rent</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publishing_house">House</string>
    <string name="placeholder">Placeholder</string>
</resources>