<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RentFragment">


    <TextView
        android:id="@+id/userName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/book"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_list" />

    <Spinner
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/userName_textView" />

    <Spinner
        android:id="@+id/book_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/book_textView"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/newRent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_rent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_32dp"/>

    <TextView
        android:id="@+id/startDate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/start_date"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_list" />

    <EditText
        android:id="@+id/startDate_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@+id/startDate_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <TextView
        android:id="@+id/endDate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/end_date"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/startDate_textView"
        app:layout_constraintTop_toBottomOf="@+id/startDate_textView" />

    <EditText
        android:id="@+id/endDate_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@+id/endDate_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <TextView
        android:id="@+id/cost_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/endDate_textView"
        app:layout_constraintTop_toBottomOf="@+id/endDate_textView" />

    <EditText
        android:id="@+id/price_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@+id/cost_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>