<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment">

    <TextView
        android:id="@+id/firstName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/firstName_textView"
        app:layout_constraintTop_toBottomOf="@+id/firstName_textView" />

    <TextView
        android:id="@+id/fiscalCode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/fiscal_code"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lastName_textView"
        app:layout_constraintTop_toBottomOf="@+id/lastName_textView" />

    <TextView
        android:id="@+id/age_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fiscalCode_textView"
        app:layout_constraintTop_toBottomOf="@+id/fiscalCode_textView" />

    <EditText
        android:id="@+id/firstName_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstName_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <EditText
        android:id="@+id/lastName_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastName_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <EditText
        android:id="@+id/fiscalCode_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/fiscalCode_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <EditText
        android:id="@+id/age_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/age_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <Button
        android:id="@+id/newUser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>