<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BookFragment">

    <TextView
        android:id="@+id/bookName_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorName_textView"
        app:layout_constraintStart_toStartOf="@+id/bookName_textView"
        app:layout_constraintTop_toBottomOf="@+id/bookName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/publishingHouse_textView"
        app:layout_constraintStart_toStartOf="@+id/authorName_textView"
        app:layout_constraintTop_toBottomOf="@+id/authorName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/publishing_house"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/bookName_editText"
        app:layout_constraintBaseline_toBaselineOf="@+id/bookName_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/authorName_editText"
        app:layout_constraintBaseline_toBaselineOf="@+id/authorName_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/publishingHouse_editText"
        app:layout_constraintBaseline_toBaselineOf="@+id/publishingHouse_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        app:layout_constraintGuide_percent="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/newBook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publishingHouse_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/add_book" />

</androidx.constraintlayout.widget.ConstraintLayout>